--- a/index.html
+++ b/index.html
@@ -3,47 +3,147 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HTML Games Collection</title>
+  <title>Game Hub</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 2em; background: #f4f4f4; }
-    h1 { text-align: center; margin-bottom: 40px; }
-    .game-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      margin: 0;
+      padding: 0;
     }
-    .game-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    header {
+      background: #222;
       padding: 20px;
-      width: 200px;
       text-align: center;
-      transition: transform 0.2s ease;
     }
-    .game-card:hover {
-      transform: translateY(-5px);
+    h1 {
+      margin: 0;
+      font-size: 2.5em;
     }
-    a {
+    .game-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 10px;
+      padding: 20px;
+    }
+    .game-list a {
+      display: block;
+      background: #333;
+      padding: 12px;
+      text-align: center;
       text-decoration: none;
-      color: #007acc;
-      font-weight: bold;
+      color: #fff;
+      border-radius: 6px;
+      transition: background 0.2s;
+    }
+    .game-list a:hover {
+      background: #555;
+    }
+    footer {
+      text-align: center;
+      padding: 10px;
+      background: #222;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
-  <h1>My HTML Games Collection</h1>
-  <div class="game-list">
-    <div class="game-card"><a href="10-minutes-till-dawn/">10 Minutes Till Dawn</a></div>
-    <div class="game-card"><a href="2048/">2048</a></div>
-    <div class="game-card"><a href="Angry-Birds/">Angry Birds</a></div>
-    <div class="game-card"><a href="Cut-the-Rope/">Cut the Rope</a></div>
-    <div class="game-card"><a href="getting-over-it/">Getting Over It</a></div>
-    <div class="game-card"><a href="Stack/">Stack</a></div>
-    <div class="game-card"><a href="T-Rex-Rush/">T-Rex Rush</a></div>
-    <div class="game-card"><a href="Space-Shooter/">Space Shooter</a></div>
-    <!-- Add more games as needed -->
-  </div>
+
+<header>
+  <h1>Welcome to the Game Hub</h1>
+  <p>Click a game below to play</p>
+</header>
+
+<main class="game-list" id="gameList">
+  <!-- Game links will be injected here -->
+</main>
+
+<footer>
+  &copy; 2025 Game Hub | Hosted on GitHub Pages
+</footer>
+
+<script>
+  const games = [
+    "1", "10-minutes-till-dawn", "100ng", "1v1lol", "1v1space", "2020-game", "2048-multitask", "2048",
+    "8ball-billards-classic", "9007199254740992", "DogeMiner", "FullScreenMario", "HexGL", "OfflineParadise",
+    "Squid Gun Fest", "Stickman-Survival", "achievementunlocked", "adarkroom", "adrenalinechallenge",
+    "age-of-war", "alien-invaders-io", "alienhominid", "align-4", "among-us", "angry-birds",
+    "anti-terrorist-rush", "arcade-wizard", "asciispace", "aspiring-artist", "asteroids", "astray",
+    "avalanche", "awesome-tanks-2", "backcountry", "backflip-dive-3d", "backrooms", "bad-ice-cream-2",
+    "bad-ice-cream-3", "bad-ice-cream", "baldis-basics", "basket-bros-io", "basketball-io",
+    "basketball-legends-2020", "basketball-stars", "battleforgondor", "bigredbutton", "binding-of-isaac",
+    "bitlife", "blacholesquare", "blackholesquare", "blackknight", "blocky-snakes", "bloonstd", "bloonstd2",
+    "bloxors", "bounceback", "boxel-rebound", "boxhead2play", "brave-explorers", "breakingthebank",
+    "breaklock", "breakout", "btd4", "btts", "burning-man-2", "cannon-basketball-4", "canyondefense",
+    "captaincallisto", "cars-simulator", "cell-machine", "championarcher", "chess", "chill-radio",
+    "chromaincident", "chrome-dino", "chromedino", "circlo", "city-blocks-2", "clean-up-io", "cluster-rush",
+    "color-switch-2-challenges", "connect3", "cookie-clicker", "cookieclicker", "core-ball", "craftmine",
+    "creativekillchamber", "crossyroad", "crowd city 2", "csgo-clicker", "ctr-holiday", "ctr-tr", "ctr",
+    "cubefield", "cupcake2048", "cuttherope", "cuttherope2", "dadish", "dadish3", "dadishtwo", "dante",
+    "deal-or-no-deal", "death-run-3d", "death-soul", "deathrun", "defend-the-tank", "dino", "doctor-acorn2",
+    "dodge", "doge-miner-2", "doge-mining-simulator", "doge2048", "dont-drop-the-white-ball-2",
+    "doodle-jump", "doublewires", "douchebag-workout-2", "dragon-vs-bricks", "draw-the-hill", "drive-mad",
+    "duck-life-treasurehunt", "ducklife", "ducklife1", "ducklife2", "ducklife3", "ducklife4",
+    "duke-dashington-remastered", "dungeon-craft", "edge-surf", "edgenotfound", "elastic-face", "elasticman",
+    "emulator-js", "endlesswar3", "escapingtheprison", "evil-glitch", "evilglitch", "evolution", "exo",
+    "factory-balls-forever", "factoryballs", "factoryballsforever", "fake-virus", "fancypantsadventures",
+    "fbwg", "finns-fantastic-food-machine", "fireboywatergirlforesttemple", "fireice", "firewater",
+    "flappy-2048", "flappy-bird", "flappy-defense", "flappybird", "flashtetris", "flippy-fish",
+    "flood-runner-2", "fridaynightfunkin", "friendlyfire", "froggys-battle", "fruitninja", "frying-nemo",
+    "game-inside", "generic-fishing-game", "geodash-2", "geodash", "geometry_jump_sketchy", "geometrydash",
+    "georgeandtheprinter", "getaway-shootout", "getting-over-it", "gimme-the-airpod", "glass-city", "go-ball",
+    "golf", "goodnight", "google-snake", "google-solitaire", "gopher", "gravity-soccer", "green", "greybox",
+    "grindcraft", "grow-in-the-hole", "gun-mayhem-2", "gun-mayhem-redux", "gun-mayhem", "gunspin",
+    "hackertype", "happy-hop", "happy-wheels", "hba", "helicopter", "helios", "hexempire", "hextris",
+    "house-of-hazards", "icys-purple-head", "idle-breakout", "idle-shark", "impossiblequiz",
+    "interactivebuddy", "iscribble-io", "jelly-truck", "jetpack", "jimothy-piggerton", "just-one-boss",
+    "justfall", "kart-fight-io", "kitchen-gun-game", "kittencannon", "klocki", "konnekt", "krunker",
+    "learntofly", "learntofly2", "line-rider", "linquest", "madalin-stunt-cars-2", "madalin-stunt-cars-3",
+    "makeitmeme", "mario", "marvinspectrum", "matrixrampage", "mc1.5.2", "mcbeta0.30", "mcbeta1.3",
+    "meat-boy", "meme2048", "minecraft-classic", "minecraft", "minecraftbeta", "minesweeper", "mini-stilts",
+    "miniputt", "missiles", "moto-x3m-2", "moto-x3m-pool-party", "motox3m-pool", "motox3m-spooky",
+    "motox3m-winter", "motox3m", "motox3m2", "motox3mwinter", "my-friend-pedro", "n-gon", "ninja",
+    "ninjavsevilcorp", "ns-shaft", "om-bounce", "one-screen-run-2", "one-screen-run", "osu", "ovo",
+    "packabunchas", "pacman-fps", "pacman", "pandemic2", "papa-louie", "papas-burgeria", "papas-freezeria",
+    "papas-hot-doggeria", "papas-pancakeria", "papas-pizzeria", "papas-sushiria", "papas-wingeria",
+    "papasburgeria", "papaspizzaria", "paperio2", "papery-planes", "particle-clicker", "particleclicker",
+    "path-finder", "pe-noire", "pikwip", "pixel-cave", "pizzeria-simulator", "polybranch", "popcat-classic",
+    "portalflash", "precision-client", "protektor", "push-the-square", "push-your-luck", "pushback",
+    "puzzle-ball", "pvz-2", "q1k3", "racer", "radiusraid", "retro-bowl", "retrobowl", "retrohaunt",
+    "rise-of-neon-square", "roadblocks", "rocking-sky-trip", "rolling-forests", "rolly-vortex",
+    "rooftop-snipers", "run-3", "run3", "sand-game", "sandboxels", "scrambled-eggs", "scrapmetal",
+    "senya-and-oscar-2", "sg", "shadow-world-adventure", "shards", "shift-flash-2", "shift-flash",
+    "short-life-2", "short-ride", "shuttledeck", "skyblock", "sleepingbeauty", "slice-of-sasha",
+    "slither snake", "slither", "slope-ball", "slope", "slope2", "sm63", "sm64", "smashkarts",
+    "smokingbarrels", "snake", "snowbattle", "soldier-legend", "solitaire", "sonic-the-hedgehog",
+    "sort-the-court", "soundboard", "space-company", "spacecompany", "spacegarden", "spacehuggers",
+    "spelunky", "ssf", "stack-bump-3d", "stack", "station-141", "stealingthediamond",
+    "stick-archers-battle", "stickclimb", "stickman-boost", "stickman-dismount", "stickman-epic-battle",
+    "stickman-golf", "stickman", "stickwar", "stormthehouse2", "subway-surfers-bali", "subway-surfers",
+    "super-mario-maker-online", "super-puffer-fish-3d", "superhero-io", "superhot", "supermarioconstruct",
+    "swerve", "synesthesia", "tactical-weapon-pack-2", "tacticalassasin2", "tail-of-the-dragon",
+    "tam-indian-truck-simulator-3d", "tank-trouble-2", "tanuki-sunset", "temple-run-2", "tetris",
+    "the-final-earth-2", "the-final-earth", "the-impossible-quiz-2", "the-impossible-quiz",
+    "the-little-giant", "thebattle", "theheist", "themazeofspacegoblins", "there-is-no-game",
+    "thisistheonlylevel", "time-shooter-3", "tiny-fishing", "tiny-fragments", "tiny-islands",
+    "topple-adventure", "tosstheturtle", "tough-growth", "towermaster", "townscaper", "trimps",
+    "tube-jumpers", "tunnel-rush", "tunnelz", "tv-static", "twitch-tetris", "underrun", "unfold-2",
+    "up-left-out", "veloce", "vex3", "vex4", "vex5", "vex6", "vex7", "waterworks", "webretro",
+    "winter-falling-price", "wipo", "wolf3d", "wordle", "worlds-hardest-game-2", "worlds-hardest-game",
+    "x-trial-racing", "xx142-b2exe", "yoshifabrication", "you-are-bezos", "zig-zag", "zombocalypse",
+    "zombs-royale"
+  ];
+
+  const container = document.getElementById("gameList");
+
+  games.sort((a, b) => a.localeCompare(b)).forEach(game => {
+    const link = document.createElement('a');
+    link.href = `${game}/index.html`;
+    link.textContent = game.replace(/-/g, ' ');
+    container.appendChild(link);
+  });
+</script>
+
 </body>
 </html>
