--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
 <a href="stickman-boost/" class="game-card">Stickman Boost</a>
 <a href="stickman-dismount/" class="game-card">Stickman Dismount</a>
 <a href="stickman-epic-battle/" class="game-card">Stickman Epic Battle</a>
+<a href="Stickmanhook/" class="game-card">Stickman Hook</a>
 <a href="stickman-golf/" class="game-card">Stickman Golf</a>
 <a href="stickman/" class="game-card">Stickman</a>
 <a href="stickwar/" class="game-card">Stickwar</a>
